[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "hyperopt>=0.2.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.0",
]
